Change Enter email Address to Khayelihle

--- a/School Connect/SchoolConnect_Web_App/Views/Login/Login.cshtml
+++ b/School Connect/SchoolConnect_Web_App/Views/Login/Login.cshtml
@@ -14,7 +14,7 @@
             <div class="outer-input-div">
                 <div class="form-group">
 					<label asp-for="EmailAddress"><i class="fas fa-user"></i></label>
-                    <input asp-for="EmailAddress" id="email" placeholder="Enter Email Address">
+                    <input asp-for="EmailAddress" id="email" placeholder="Khayelihle Xolani">
                 </div>
                 <span asp-validation-for="EmailAddress" class="text-danger"></span>
             </div>
