--- a/School Connect/SchoolConnect_Web_App/Views/SysAdmin/AddSubjectsPage.cshtml
+++ b/School Connect/SchoolConnect_Web_App/Views/SysAdmin/AddSubjectsPage.cshtml
@@ -15,6 +15,7 @@
         <input asp-for="SchoolId" type="hidden" />
         <input asp-for="AdminId" type="hidden" />
         <input asp-for="Destination" type="hidden" />
+        <input asp-for="NewClasses" type="hidden" />
         <button type="submit">Submit</button>
     </form>
 </div>
