--- a/School Connect/SchoolConnect_Web_App/Views/Teacher/TeacherLandingPage.cshtml
+++ b/School Connect/SchoolConnect_Web_App/Views/Teacher/TeacherLandingPage.cshtml
@@ -24,7 +24,7 @@
     @if (Model.MainClass is not null)
     {
         <div class="form-group">
-            <a asp-action="TeacherClassRoster" asp-route-teacherId="@Model.Id" class="button">Class Roaster</a>
+            <a asp-action="TeacherClassRoster" asp-route-teacherId="@Model.Id" class="button">Class Roster</a>
         </div>
     }
     else
