--- a/School Connect/SchoolConnect_Web_App/Views/Teacher/TeacherClassRoster.cshtml
+++ b/School Connect/SchoolConnect_Web_App/Views/Teacher/TeacherClassRoster.cshtml
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header">
-            <h1>Class Roaster</h1>
+            <h1>Class Roster</h1>
         </div>
     </header>
 
